--- a/SU-GMM18A/index.htm
+++ b/SU-GMM18A/index.htm
@@ -3,6 +3,7 @@
 <title>南方大学学院学生总会 2018 年第一学期会员大会记录</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="image_src" href="/res/SU-GMM18A.png">
 <link rel="stylesheet" href="/res/style.css">
 </head>
 <body>
