THM Chinese name update
From "school" to "department"

--- a/list/index.htm
+++ b/list/index.htm
@@ -19,7 +19,7 @@
 张洸郡 Teoh Khuang Ching<br>&nbsp;</td>
 </tr>
 <tr>
-<td style="width: 50%; text-align: center"><b>旅游与酒店学部 Department of Tourism and Hospitality Management</b><br>
+<td style="width: 50%; text-align: center"><b>旅游与酒店管理系 Department of Tourism and Hospitality Management</b><br>
 朱丽盈 Chew Li Ying<br>
 黄廷慧 Wong Ting Hui<br>&nbsp;</td>
 <td style="width: 50%; text-align: center"><b>新闻与传播系 Department of Journalism and Communication</b><br>
