Add zh-Hans lang attr to Chinese pages
Try to let zh-Hant phone systems display correct font for zh-Hans pages (OCD)

--- a/SU-GMM18A/index.htm
+++ b/SU-GMM18A/index.htm
@@ -1,4 +1,4 @@
-<html>
+<html lang="zh-Hans">
 <head>
 <title>南方大学学院学生总会 2018 年第一学期会员大会记录</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
