--- a/SU-SRC-MM0002/index.htm
+++ b/SU-SRC-MM0002/index.htm
@@ -1,4 +1,4 @@
-<html>
+<html lang="zh-Hans">
 <head>
 <title>南方大学学院学生总会 第 24 届学生代表会 第 2 次会议记录</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
