--- a/list/index.htm
+++ b/list/index.htm
@@ -1,4 +1,4 @@
-<html>
+<html lang="zh-Hans">
 <head>
 <title>学代列表 List of Student Representatives</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
