--- a/team/index.htm
+++ b/team/index.htm
@@ -1,4 +1,4 @@
-<html>
+<html lang="zh-Hans">
 <head>
 <title>议长团 The Prolocutor Team</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
