--- a/index.htm
+++ b/index.htm
@@ -12,6 +12,7 @@
 <h3>会员大会记录</h3>
 <ul>
 <li><a href="SU-GMM18A">南方大学学院学生总会 2018 年第一学期会员大会记录</a></li>
+<li><a href="SU-GMM18B">南方大学学院学生总会 2018 年第二学期第 2 次会员大会记录</a></li>
 </ul>
 <h3>学代会议记录</h3>
 <ul>
@@ -20,6 +21,7 @@
 <li><a href="SU-SRC-MM0003">南方大学学院学生总会 第 24 届学生代表会 第 3 次会议记录</a></li>
 <li><a href="SU-SRC-MM0004">南方大学学院学生总会 第 24 届学生代表会 第 4 次 (紧急) 会议记录</a></li>
 <li><a href="SU-SRC-MM0005">南方大学学院学生总会 第 24 届学生代表会 第 5 次 (紧急) 会议记录</a></li>
+<li><a href="SU-SRC-MM0006">南方大学学院学生总会 第 24 届学生代表会 第 6 次 (紧急) 会议记录</a></li>
 </ul>
 </body>
 </html>
