--- a/en/index.htm
+++ b/en/index.htm
@@ -13,6 +13,7 @@
 <h3>Minutes of General Meetings</h3>
 <ul>
 <li>Minutes of the General Meeting (Semester 1, 2018) of Student Union, Southern University College</li>
+<li>Minutes of the Second General Meeting (Semester 2, 2018) of Student Union, Southern University College</li>
 </ul>
 <h3>Minutes of SRC Meetings</h3>
 <ul>
@@ -20,6 +21,8 @@
 <li>Minutes of the Second Meeting of 24th Student Representative Council of Student Union, Southern University College</li>
 <li>Minutes of the Third Meeting of 24th Student Representative Council of Student Union, Southern University College</li>
 <li>Minutes of the Fourth (Emergency) Meeting of 24th Student Representative Council of Student Union, Southern University College</li>
+<li>Minutes of the Fifth (Emergency) Meeting of 24th Student Representative Council of Student Union, Southern University College</li>
+<li>Minutes of the Sixth (Emergency) Meeting of 24th Student Representative Council of Student Union, Southern University College</li>
 </ul>
 </body>
 </html>
