--- a/SU-GMM18B/index.htm
+++ b/SU-GMM18B/index.htm
@@ -33,7 +33,7 @@
 </ul>
 <table style="width: 100%">
 <tr>
-<th>1</th>
+<th style="width: 20px">1</th>
 <th colspan="4">议程介绍</th>
 </tr>
 <tr>
@@ -41,7 +41,7 @@
 <td colspan="4">议长向会员介绍这次会员大会的议程，如下：</td>
 </tr>
 <tr>
-<th></th><th>1.1</th>
+<th></th><th style="width: 40px">1.1</th>
 <td colspan="3">覆准 2018 年第一学期会员大会记录</td>
 </tr>
 <tr>
