--- a/SU-GMM18B/index.htm
+++ b/SU-GMM18B/index.htm
@@ -198,7 +198,7 @@
 </tr>
 <tr>
 <th></th><th></th><th>3.4.1</th>
-<td colspan="2">年第一学期财政报告</td>
+<td colspan="2">2018 年第一学期财政报告</td>
 </tr>
 <tr>
 <th></th><th></th><th></th><th style="width: 70px">3.4.1.1</th>
