Update SR full list

--- a/en/index.htm
+++ b/en/index.htm
@@ -23,6 +23,7 @@
 <li>Minutes of the Fourth (Emergency) Meeting of 24th Student Representative Council of Student Union, Southern University College</li>
 <li>Minutes of the Fifth (Emergency) Meeting of 24th Student Representative Council of Student Union, Southern University College</li>
 <li>Minutes of the Sixth (Emergency) Meeting of 24th Student Representative Council of Student Union, Southern University College</li>
+<li>Minutes of the Seventh (Emergency) Meeting of 24th Student Representative Council of Student Union, Southern University College</li>
 </ul>
 </body>
 </html>
