--- a/list/index.htm
+++ b/list/index.htm
@@ -8,55 +8,82 @@
 <body>
 <p align="center"><img src="/res/banner.png" style="max-width: 100%; max-height: 128px"></p>
 <p align="center"><a href="/">首页</a>　　<a href="/team">议长团 The Prolocutor Team</a>　　<a href="/en">Index</a></p>
-<p align="center"><b>学代列表 List of Student Representatives</b><br><i>截至 2018 年 11 月 10 日　　As of 10 November 2018</i></p>
+<p align="center"><b>历任学代列表 List of Student Representatives</b></p>
 <div class="table">
 <div class="row">
 <div class="column"><div class="cell"><b>企业与管理学院 Faculty of Business and Management</b><br>
+黄俊颖 Ng Jun Ying<br>
+李婉京 Lee Wan Jing<br>
 谢妮娜 Chia Nee Nah<br>
 林佳希 Lim Jei Xee<br>&nbsp;</div></div>
 <div class="column"><div class="cell"><b>金融系 Department of Finance</b><br>
+郑国胜 Tay Guo Sheng<br>
+陈蕴如 Chin Yun Ru<br>
 符嘉雯 Foo Kah Mun<br>
 张洸郡 Teoh Khuang Ching<br>&nbsp;</div></div>
 </div>
 <div class="row">
+<div class="column"><div class="cell"><b>旅游与酒店学部 Department of Tourism and Hospitality Management</b><br>
+颜思怡 Gan Shi Yi<br>
+朱丽盈 Chew Li Ying<br>
+黄廷慧 Wong Ting Hui<br>&nbsp;</div></div>
 <div class="column"><div class="cell"><b>新闻与传播系 Department of Journalism and Communication</b><br>
+莫少慈 Mok Siew Cze<br>
+黄伟俊 Wong Wei Jiun Dennis<br>
 叶镓乐 Yip Chia Le<br>
 林庭萱 Lim Ting Xuan<br>&nbsp;</div></div>
-<div class="column"><div class="cell"><b>中文系 Department of Chinese Studies</b><br>
-黄颖慧 Daphne Eng Ying Hui<br>
-许宗阳 Koh Zong Yang<br>&nbsp;</div></div>
 </div>
 <div class="row">
+<div class="column"><div class="cell"><b>中文系 Department of Chinese Studies</b><br>
+方浩棠 Kenny H'ng Hou Thang<br>
+廖锦荣 Liew Jin Rong<br>
+黄颖慧 Daphne Eng Ying Hui<br>
+许宗阳 Koh Zong Yang<br>&nbsp;</div></div>
 <div class="column"><div class="cell"><b>英文系 Department of English</b><br>
 Iswarya Naaidu Murugaiah<br>
 Joanna Abigail D/o Lazarus<br>&nbsp;</div></div>
-<div class="column"><div class="cell"><b>学前幼儿教育系 Department of Early Childhood Education</b><br>
-李佩茹 Lee Pei Ru<br>
-曾芷晴 Ching Zhi Chin<br>&nbsp;</div></div>
 </div>
 <div class="row">
+<div class="column"><div class="cell"><b>学前幼儿教育系 Department of Early Childhood Education</b><br>
+辜惠纯 Ko Hwee Chun<br>
+钟佩恩 Choong Hui Yan<br>
+李佩茹 Lee Pei Ru<br>
+曾芷晴 Ching Zhi Chin<br>&nbsp;</div></div>
 <div class="column"><div class="cell"><b>艺术与设计学院 Faculty of Art and Design</b><br>
 谢佳辉 Cheah Jia Hui<br>
 邱玉莹 Koo Yu Ying<br>&nbsp;</div></div>
-<div class="column"><div class="cell"><b>电机与电子工程系 Department of Electrical and Electronic Engineering</b><br>
-梁淑婷 Leong Shu Ting<br>
-陈玮彬 Chin Wei Bin<br>&nbsp;</div></div>
 </div>
 <div class="row">
+<div class="column"><div class="cell"><b>电机与电子工程系 Department of Electrical and Electronic Engineering</b><br>
+梁淑婷 Leong Shu Ting<br>
+林煦瑶 Lim Xu Yao<br>
+陈玮彬 Chin Wei Bin<br>&nbsp;</div></div>
 <div class="column"><div class="cell"><b>电脑系 Department of Computer Science</b><br>
 林俊玮 Lim Chunwei<br>
-方玺翔 Fong Shi Siang<br>&nbsp;</div></div>
+方玺翔 Fong Shi Siang<br>
+林子潍 Lim G Wei<br>&nbsp;</div></div>
+</div>
+<div class="row">
+<div class="column"><div class="cell"><b>迪赛大学 Teesside University</b><br>
+江伟豪 Kan Wei Hao<br>
+张刚睿 Chong Gang Rui<br>&nbsp;</div></div>
 <div class="column"><div class="cell"><b>中医药学院 Faculty of Chinese Medicine</b><br>
 陈恩申 Tan En Shen<br>
 吕静 Lee Jing<br>&nbsp;</div></div>
 </div>
 <div class="row">
 <div class="column"><div class="cell"><b>大学基础学部 School of Foundation Studies</b><br>
+林颖乐 Lim Yin Le<br>
+李慧仪 Lee Hui Yee<br>
+颜俊菡 Gan Zun Han<br>
+陈伟龙 Tan Wai Rong<br>
+林妤珊 Ling Yu Shan<br>
+李子敬 Lee Zi Jian<br>
 周源轩 Chew Yuen Xuen<br>
 郑煜达 Tey Yik Tat<br>&nbsp;</div></div>
 <div class="column"><div class="cell"><b>心理学系 Department of Psychology</b><br>
-郑怡柔 Joeyii Tey Yee Joe<br>
-唐近蒽 Venus Tong Qi Enn<br>&nbsp;</div></div>
+郑怡柔 Tey Yee Joe<br>
+唐近蒽 Tong Qi Enn<br>&nbsp;</div></div>
 </div>
 </div>
 </body>
