--- a/index.htm
+++ b/index.htm
@@ -22,6 +22,7 @@
 <li><a href="SU-SRC-MM0004">南方大学学院学生总会 第 24 届学生代表会 第 4 次 (紧急) 会议记录</a></li>
 <li><a href="SU-SRC-MM0005">南方大学学院学生总会 第 24 届学生代表会 第 5 次 (紧急) 会议记录</a></li>
 <li><a href="SU-SRC-MM0006">南方大学学院学生总会 第 24 届学生代表会 第 6 次 (紧急) 会议记录</a></li>
+<li><a href="SU-SRC-MM0007">南方大学学院学生总会 第 24 届学生代表会 第 7 次 (紧急) 会议记录</a></li>
 </ul>
 </body>
 </html>
