--- a/SU-GMM18B/index.htm
+++ b/SU-GMM18B/index.htm
@@ -542,8 +542,7 @@
 </tr>
 <tr>
 <th></th><th></th><th>5.10.1</th>
-<td colspan="2">先前有学生代表失去资格的中文系和旅游与酒店学部已重新
-委派学生代表</td>
+<td colspan="2">先前有学生代表失去资格的中文系和旅游与酒店学部已重新委派学生代表</td>
 </tr>
 <tr>
 <th></th><th>5.11</th>
