--- a/en/index.htm
+++ b/en/index.htm
@@ -14,6 +14,7 @@
 <ul>
 <li>Minutes of the General Meeting (Semester 1, 2018) of Student Union, Southern University College</li>
 <li>Minutes of the Second General Meeting (Semester 2, 2018) of Student Union, Southern University College</li>
+<li>Minutes of the Second General Meeting (Semester 3, 2018) of Student Union, Southern University College</li>
 </ul>
 <h3>Minutes of SRC Meetings</h3>
 <ul>
