--- a/index.htm
+++ b/index.htm
@@ -13,6 +13,7 @@
 <ul>
 <li><a href="SU-GMM18A">南方大学学院学生总会 2018 年第一学期会员大会记录</a></li>
 <li><a href="SU-GMM18B">南方大学学院学生总会 2018 年第二学期第 2 次会员大会记录</a></li>
+<li><a href="SU-GMM18C">南方大学学院学生总会 2018 年第三学期第 2 次会员大会记录</a></li>
 </ul>
 <h3>学代会议记录</h3>
 <ul>
