--- a/SU-GMM18C/index.htm
+++ b/SU-GMM18C/index.htm
@@ -62,7 +62,7 @@
 </tr>
 <tr>
 <th></th><th>1.6</th>
-<td colspan="3">散会</td>
+<td colspan="3">散会<br>&nbsp;</td>
 </tr>
 <tr>
 <th>2</th>
@@ -270,7 +270,7 @@
 </tr>
 <tr>
 <th></th><th>4.1</th>
-<td colspan="3">议长：这是学总首次有权力机构首长缺席会员大会，学总三权机构制度显得毫无意义；新一届监察委员会若要调查此事，非常支持；监察委员会必须给予交代</td>
+<td colspan="3">议长：这是学总首次有权力机构首长缺席会员大会，学总三权机构制度显得毫无意义；新一届监察委员会若要调查此事，非常支持；监察委员会必须给予交代<br>&nbsp;</td>
 </tr>
 <tr>
 <th>5</th>
