Migration to a new name
Moved SRC24 contents to a folder named 24

--- a/24/SU-GMM18C/index.htm
+++ b/24/SU-GMM18C/index.htm
@@ -3,8 +3,8 @@
 <title>南方大学学院学生总会 2018 年第三学期第 2 次会员大会记录</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="image_src" href="/res/SU-GMM18C.png">
-<link rel="stylesheet" href="/res/style.css">
+<link rel="image_src" href="/24/res/SU-GMM18C.png">
+<link rel="stylesheet" href="/24/res/style.css">
 </head>
 <body>
 <p>SU-GMM18C</p>
