--- a/24/SU-SRC-MM0006/index.htm
+++ b/24/SU-SRC-MM0006/index.htm
@@ -3,7 +3,7 @@
 <title>南方大学学院学生总会 第 24 届学生代表会 第 6 次 (紧急) 会议记录</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/res/style.css">
+<link rel="stylesheet" href="/24/res/style.css">
 </head>
 <body>
 <p>SU-SRC-MM0006</p>
@@ -153,6 +153,6 @@
 <li>副议长 Joanna Abigail D/o Lazarus</li>
 <li>学生代表会秘书 林俊玮</li>
 </ul>
-<p><a href="/">回到首页</a></p>
+<p><a href="/24">回到首页</a></p>
 </body>
 </html>
