--- a/24/en/index.htm
+++ b/24/en/index.htm
@@ -3,11 +3,11 @@
 <title>24th Student Representative Council of Student Union, Southern University College</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/res/style.css">
+<link rel="stylesheet" href="/24/res/style.css">
 </head>
 <body>
-<p align="center"><img src="/res/banner.png" style="max-width: 100%; max-height: 128px"></p>
-<p align="center"><a href="/team">The Prolocutor Team</a>　　<a href="/list">List of Student Representatives</a>　　<a href="/">中文</a></p>
+<p align="center"><img src="/24/res/banner.png" style="max-width: 100%; max-height: 128px"></p>
+<p align="center"><a href="/24/team">The Prolocutor Team</a>　　<a href="/24/list">List of Student Representatives</a>　　<a href="/24">中文</a></p>
 <p align="center" style="font-style: italic">For more information about Student Union, please visit <a href="https://fb.com/SUCStudentUnion">the Facebook page of Student Union, Southern University College</a></p>
 <p><b>Note</b> - All hyperlinks below point to English translations of the minutes of meetings.</p>
 <h3>Minutes of General Meetings</h3>
