--- a/24/list/index.htm
+++ b/24/list/index.htm
@@ -3,11 +3,11 @@
 <title>学代列表 List of Student Representatives</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/res/style.css">
+<link rel="stylesheet" href="/24/res/style.css">
 </head>
 <body>
-<p align="center"><img src="/res/banner.png" style="max-width: 100%; max-height: 128px"></p>
-<p align="center"><a href="/">首页</a>　　<a href="/team">议长团 The Prolocutor Team</a>　　<a href="/en">Index</a></p>
+<p align="center"><img src="/24/res/banner.png" style="max-width: 100%; max-height: 128px"></p>
+<p align="center"><a href="/24">首页</a>　　<a href="/24/team">议长团 The Prolocutor Team</a>　　<a href="/24/en">Index</a></p>
 <p align="center"><b>历任学代列表 List of Student Representatives</b></p>
 <div class="table">
 <div class="row">
