--- a/24/SU-GMM18A/index.htm
+++ b/24/SU-GMM18A/index.htm
@@ -3,8 +3,8 @@
 <title>南方大学学院学生总会 2018 年第一学期会员大会记录</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="image_src" href="/res/SU-GMM18A.png">
-<link rel="stylesheet" href="/res/style.css">
+<link rel="image_src" href="/24/res/SU-GMM18A.png">
+<link rel="stylesheet" href="/24/res/style.css">
 </head>
 <body>
 <p>SU-GMM18A</p>
@@ -1009,6 +1009,6 @@
 <li>主席 郑伟和</li>
 <li>监察长 刘育延</li>
 </ul>
-<p><a href="/">回到首页</a></p>
+<p><a href="/24">回到首页</a></p>
 </body>
 </html>
