--- a/24/index.htm
+++ b/24/index.htm
@@ -3,11 +3,11 @@
 <title>南方大学学院学生总会 第 24 届学生代表会</title>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/res/style.css">
+<link rel="stylesheet" href="/24/res/style.css">
 </head>
 <body>
-<p align="center"><img src="/res/banner.png" style="max-width: 100%; max-height: 128px"></p>
-<p align="center"><a href="/team">议长团</a>　　<a href="/list">学代列表</a>　　<a href="/en">English</a></p>
+<p align="center"><img src="/24/res/banner.png" style="max-width: 100%; max-height: 128px"></p>
+<p align="center"><a href="/24/team">议长团</a>　　<a href="/24/list">学代列表</a>　　<a href="/24/en">English</a></p>
 <p align="center" style="font-style: italic">欲知更多学总消息，欢迎浏览<a href="https://fb.com/SUCStudentUnion">南方大学学院学生总会面簿专页</a></p>
 <h3>会员大会记录</h3>
 <ul>
