--- a/404.html
+++ b/404.html
@@ -5,87 +5,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>南方大学学院学生总会学生代表会 Student Representative Council of Student Union, Southern University College</title>
 <style>
-* {
-	box-sizing: border-box;
-	font-family: sans-serif;
-	font-size: 25px;
-	line-height: 1.5;
-}
-
-body {
-	background: #030303 linear-gradient(#030303, #111111 35%, #555555);
-	align-items: center;
-	color: #ffffff;
-	display: flex;
-	flex-direction: column;
-	height: 100vh;
-	justify-content: center;
-	margin: 0;
-	user-select: none;
-	width: 100vw;
-}
-
-img#icon {
-	border-radius: 10px;
-	pointer-events: none;
-	width: 230px;
-}
-
-#zhtitle {
-	font-size: 50px;
-	letter-spacing: 3px;
-	padding-left: 3px;
-	margin-top: 1.25rem;
-}
-
-div {
-	margin-top: 2.25rem;
-}
-
-.th-btn {
-	background-color: #ff8f6b;
-	border-radius: 10px;
-	color: #ffffff;
-	padding: 15px 20px;
-	text-decoration: none;
-	text-shadow: 1px 1px 2px #000000;
-	transition: 250ms;
-}
-
-.th-btn:hover {
-	background-color: #c43e1c;
-}
-
-#socmed a {
-	margin-left: 15px;
-}
-
-#socmed a:first-child {
-	margin-left: 0;
-}
-
-#socmed a:first-child img {
-	border-radius: 50%;
-}
-
-#socmed a:hover img {
-	background: #030303;
-	transition: 1.25s;
-}
-
-#socmed img {
-	border-radius: 21px;
-	padding: 8px;
-	width: 66px;
+:root {
+	--btn: #ff8f6b;
+	--btn-hover: #c43e1c;
 }
 </style>
+<link rel="stylesheet" media="screen" href="https://SU-SRC.github.io/res/screen.css">
 <img id="icon" src="https://avatars.githubusercontent.com/u/37092401">
 <span id="zhtitle">南方大学学院学生总会学生代表会</span><span>Student Representative Council of Student Union, Southern University College</span>
 <div>
 <a class="th-btn" href="/24">24</a>
 </div>
 <div id="socmed">
-<a href="https://fb.com/SUCStudentUnion"><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='866.6 3.7 194.2 193'%3E%3Cpath d='M1060.8,100.8c0-53.6-43.5-97.1-97.1-97.1s-97.1,43.5-97.1,97.1c0,48.5,35.5,88.7,82,95.9v-67.9h-24.8v-28 h24.8V79.4c0-24.3,14.4-37.8,36.6-37.8c10.6,0,21.6,2,21.6,2v23.7h-12.2c-12.1,0-15.9,7.6-15.9,15.2v18.2h27l-4.3,28h-22.7v67.9 C1025.3,189.5,1060.8,149.3,1060.8,100.8z' style='fill:%23fff'/%3E%3C/svg%3E"></a>
-<a href="https://instagr.am/suc__su"><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1000 1000'%3E%3Cpath class='cls-1' d='M295.42,6c-53.2,2.51-89.53,11-121.29,23.48-32.87,12.81-60.73,30-88.45,57.82S40.89,143,28.17,175.92c-12.31,31.83-20.65,68.19-23,121.42S2.3,367.68,2.56,503.46,3.42,656.26,6,709.6c2.54,53.19,11,89.51,23.48,121.28,12.83,32.87,30,60.72,57.83,88.45S143,964.09,176,976.83c31.8,12.29,68.17,20.67,121.39,23s70.35,2.87,206.09,2.61,152.83-.86,206.16-3.39S799.1,988,830.88,975.58c32.87-12.86,60.74-30,88.45-57.84S964.1,862,976.81,829.06c12.32-31.8,20.69-68.17,23-121.35,2.33-53.37,2.88-70.41,2.62-206.17s-.87-152.78-3.4-206.1-11-89.53-23.47-121.32c-12.85-32.87-30-60.7-57.82-88.45S862,40.87,829.07,28.19c-31.82-12.31-68.17-20.7-121.39-23S637.33,2.3,501.54,2.56,348.75,3.4,295.42,6m5.84,903.88c-48.75-2.12-75.22-10.22-92.86-17-23.36-9-40-19.88-57.58-37.29s-28.38-34.11-37.5-57.42c-6.85-17.64-15.1-44.08-17.38-92.83-2.48-52.69-3-68.51-3.29-202s.22-149.29,2.53-202c2.08-48.71,10.23-75.21,17-92.84,9-23.39,19.84-40,37.29-57.57s34.1-28.39,57.43-37.51c17.62-6.88,44.06-15.06,92.79-17.38,52.73-2.5,68.53-3,202-3.29s149.31.21,202.06,2.53c48.71,2.12,75.22,10.19,92.83,17,23.37,9,40,19.81,57.57,37.29s28.4,34.07,37.52,57.45c6.89,17.57,15.07,44,17.37,92.76,2.51,52.73,3.08,68.54,3.32,202s-.23,149.31-2.54,202c-2.13,48.75-10.21,75.23-17,92.89-9,23.35-19.85,40-37.31,57.56s-34.09,28.38-57.43,37.5c-17.6,6.87-44.07,15.07-92.76,17.39-52.73,2.48-68.53,3-202.05,3.29s-149.27-.25-202-2.53m407.6-674.61a60,60,0,1,0,59.88-60.1,60,60,0,0,0-59.88,60.1M245.77,503c.28,141.8,115.44,256.49,257.21,256.22S759.52,643.8,759.25,502,643.79,245.48,502,245.76,245.5,361.22,245.77,503m90.06-.18a166.67,166.67,0,1,1,167,166.34,166.65,166.65,0,0,1-167-166.34' transform='translate(-2.5 -2.5)' style='fill:%23fff'/%3E%3C/svg%3E"></a>
+<a href="https://fb.com/SUCStudentUnion"><img src="https://SU-SRC.github.io/res/fb.svg"></a>
+<a href="https://instagr.am/suc__su"><img src="https://SU-SRC.github.io/res/ig.svg"></a>
 </div>
 </html>
